[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "utf64"
authors = [{name = "Iain Merrick", email = "iain@moreplease.com"}]
dynamic = ["version", "description"]
requires-python = ">=3.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/more-please/utf64"
